Adding projects from apps.neptuo.com. Adding all nuget packages.

--- a/cesky/index.html
+++ b/cesky/index.html
@@ -22,7 +22,7 @@
             </button>
 
             <ul class="left">
-                    <li class="active">
+                    <li>
         <a href="/">
             <div class="maintext">
                 Home
@@ -74,19 +74,19 @@
             <div class="intro">
     <div class="intro-content container">
         <span class="language">
-            <a href="/cesky">Tuto str&#225;nku v&#225;m t&#233;ž můžeme nab&#237;dnout v češtině.</a>
+            <a href="/">We can offer you this page in English.</a>
         </span>
-        <h1>Hello!</h1>
+        <h1>Vítejte!</h1>
     </div>
 </div>
 
 <div class="container">
 
     <div class="folder center">
-        <h2>What can we do for you?</h2>
+        <h2>Co vám můžeme nabídnout?</h2>
         <span>
-            Would you like destkop application or do you prefer web application with rich user interface, or should it be mobile one?
-            We speak all these patforms and technologies.
+            Potřebujete Windows aplikaci nebo dáváte přednost webovým aplikacím s bohatým uživatelským rozhraním, nebo snad okamžitá dostupnost mobilních aplikací je to, co vám vyhovuje?
+            Můžeme vám pomoci ve všech těchto oblastech.
         </span>
     </div>
 
@@ -95,14 +95,14 @@
             <div class="box">
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-usd"></span>
-                    <h2>Business apps</h2>
+                    <h2>Podnikové aplikace</h2>
                 </div>
                 <p>
-                    Applications based on customer requirements, build on our reusable infrastructure for lowering costs.
-                    The goal is to optimize everyday processes.
+                    Aplikace postavené přímo na míru zákazníkovi, využívající naše již hotové komponenty.
+                    Cílem je zde optimalizace každodenních úkolů zákazníka.
                 </p>
                 <p>
-                    Shipped on web, mobile or desktop platform for optimal use.
+                    Dodávané jako webové, mobilní nebo Windows aplikace.
                 </p>
             </div>
         </div>
@@ -110,11 +110,11 @@
             <div class="box">
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-globe"></span>
-                    <h2>Web sites</h2>
+                    <h2>Webové stránky</h2>
                 </div>
                 <p class="first">
-                    Customers web presentations, using multi tenant CMS, PHP based for lowcost hosting
-                    and with access control, so each user can have access only to the part of the whole system he needs.
+                    Prezentace firem nebo osob, postavené na našem redakčním systému, který toho již velmi mnoho umí.
+                    Můžeme hostovat několik webů v rámci jednoho redačkního systému a řídit přistup uživatelů k jednolivým částem.
                 </p>
             </div>
         </div>
@@ -122,11 +122,11 @@
             <div class="box">
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-phone"></span>
-                    <h2>Mobile apps</h2>
+                    <h2>Mobilní aplikace</h2>
                 </div>
                 <p class="first">
-                    We have experiences with building Android and Windows Mobile applications.
-                    We can use Xamarin for cross platform apps or develope native app for that platform.
+                    Máme zkušenosti s aplikace pro Andriod i mobilní Windows.
+                    Můžeme dokonce použít Xamarin pro vývoj aplikace, která bude fungovat na všech platformách.
                 </p>
             </div>
         </div>
@@ -136,10 +136,10 @@
             <div class="box">
                 <div class="folder-heading">
                     <span>C#</span>
-                    <h2>Most prefered</h2>
+                    <h2>Oblíbené</h2>
                 </div>
                 <p class="first">
-                    Our most prefered language, running on Windows and thanks to the .NET Core also on Linux and MAC OSX.
+                    Nás oblíbenější programovací jazyk, podporující Windows a díky .NET Core také Linux a MAC OSX.
                 </p>
             </div>
         </div>
@@ -147,10 +147,10 @@
             <div class="box">
                 <div class="folder-heading">
                     <span>PHP</span>
-                    <h2>Lowcost</h2>
+                    <h2>Levné</h2>
                 </div>
                 <p class="first">
-                    Our CMS is build using PHP and thanks to low cost of PHP hostings, it is ideal for personal or company presentations and small business applications.
+                    Náš redakční systému je postaven na PHP a díky levnému hostingu pro PHP, je ideální pro osobní nebo firemní webové presentace a malé podnikové aplikace.
                 </p>
             </div>
         </div>
@@ -158,13 +158,13 @@
             <div class="box">
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <h2>For hire</h2>
+                    <h2>K najmutí</h2>
                 </div>
                 <p class="first">
-                    We are available for hire, to share our experiences, skills and knowledge.
+                    Nebráníme se žádné spolupráci.
                 </p>
                 <p>
-                    We can offer C#, PHP, SQL or JavaScript skills and years of experiences.
+                    Můžeme nabídnout znalosti v C#, PHP, SQL a JavaScriptu s letitou praxí.
                 </p>
             </div>
         </div>
@@ -173,16 +173,16 @@
 
     <div class="folder">
         <h2 class="folder-heading">
-            <a href="/project">Open-source projects</a>
+            <a href="/project">Open-source projecty</a>
         </h2>
         <p class="first">
-            We have developed most of our infrastructure as open-source, hosted on Google Code and now on GitHub.
-            These projects starts with simple extensions for system libraries and ends with complete CQRS infrastructure with EventSourcing
-            and support for persistent command and event delivery.
+            Většina naší infrastruktury je open-source, dostupná na Google Code a nyní na GitHubu.
+            Tyto projekty prokrývají škálu od různých rozšíření základních knihoven 
+            až po plnou implementaci CQRS pro distribuované a škálovatelné aplikace.
         </p>
         <p>
-            As most of our implementations are based on Windows and .NET platform, these projects are delivered as NuGet packages, VisualStudio extensions
-            or ClickOnce windows applications.
+            Tyto projekty jsou nejčastěji dostupné jako NuGet balíčky .NET knihoven, rozšíření pro VisualStudio 
+            nebo ClickOnce Windows aplikace.
         </p>
 
             <div class="col-md-5">
@@ -228,10 +228,10 @@
 
     <div class="folder">
         <h2 class="folder-heading">
-            <a href="/service">Latest web references</a>
+            <a href="/service">Poslední realizované webové prezentace</a>
         </h2>
         <p>
-            Here are some of the recent web sites we have made. In some cases we have outsourced graphics. Most of the sites are running our CMS.
+            Zde je několik posledních realizovaných webových prezentací, využívající náš redakční systém.
         </p>
         
                      <a target="_blank" href="http://www.skolylibochovice.cz">
@@ -257,11 +257,12 @@
         <div class="clear"></div>
 
         <p>
-            Also we have created some sites (this one included) using pre-generated static sites, hosted on free hostings and periodically or manualy updated.
-            These sites uses advanced WebApplication technologies, like ASP.NET, but only static HTML &amp; assets are published on production server.
+            Několik webů jsme též realizovali jako předgenerované statické stránky, hostované na bezplatných službách.
+            Často jsou generovány z komplexních webových technologií, jako je ASP.NET, nicméně na server se publikují jen vygenerované HTML, obrázky a styly.
+            Tyto weby pak mají vynimální nároky na server, na kterém běží.
         </p>
         <p class="right">
-            <a href="/blog/2016/9/1/website-introduction">More on this topic can be found on our blog</a>.
+            <a href="/blog/2016/9/1/website-introduction">V&#237;ce na toto t&#233;ma na našem blogu (v angličtině)</a>.
         </p>
 
         <div class="clear"></div>
