Add ld+json. Add SolutionRunner-v1.6.0.

--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -101,7 +101,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.5 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6 to download</a>.
                         </li>
 
                 </ul>
@@ -137,6 +137,36 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li>
+                                <strong>v1.6</strong>
+                                    <ul>
+
+                                            <li>
+                                                Added support for counting application and file statistics with classic pie chart view.
+                                            </li>
+                                            <li>
+                                                Searching is now instant, without deplay.
+                                            </li>
+                                            <li>
+                                                Added help popup for a first time setup.
+                                            </li>
+                                            <li>
+                                                Added support for defining custom initial window position.
+                                            </li>
+                                            <li>
+                                                Added option for displaying tray-icon. Clicking a tray-icon brings a window to front.
+                                            </li>
+                                            <li>
+                                                File system is scanned in the background. It is also reloaded only when source directory is changed, not on every configuration save.
+                                            </li>
+                                            <li>
+                                                When global hotkey is not set, application is visible on task-bar.
+                                            </li>
+                                            <li>
+                                                Added titles containing full path for solution files and applications.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li>
                                 <strong>v1.5</strong>
                                     <ul>
@@ -302,5 +332,13 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
         ga('send', 'pageview');
     </script>
     
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "Organization",
+            "url": "http://www.neptuo.com",
+            "logo": "/Content/Images/Logo-220.png"
+        }
+    </script>
 </body>
 </html>
