--- a/project/desktop/index.html
+++ b/project/desktop/index.html
@@ -153,7 +153,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.5 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6 to download</a>.
                         </li>
 
                 </ul>
@@ -366,5 +366,13 @@ https://github.com/maraf/WindowsDock</span></a>.
         ga('send', 'pageview');
     </script>
     
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "Organization",
+            "url": "http://www.neptuo.com",
+            "logo": "/Content/Images/Logo-220.png"
+        }
+    </script>
 </body>
 </html>
