--- a/project/desktop/linkextractor/index.html
+++ b/project/desktop/linkextractor/index.html
@@ -198,5 +198,13 @@ https://github.com/maraf/LinkExtractor</span></a>.
         ga('send', 'pageview');
     </script>
     
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "Organization",
+            "url": "http://www.neptuo.com",
+            "logo": "/Content/Images/Logo-220.png"
+        }
+    </script>
 </body>
 </html>
