--- a/project/index.html
+++ b/project/index.html
@@ -230,5 +230,13 @@
         ga('send', 'pageview');
     </script>
     
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "Organization",
+            "url": "http://www.neptuo.com",
+            "logo": "/Content/Images/Logo-220.png"
+        }
+    </script>
 </body>
 </html>
