--- a/project/vsix/neptuo.productivity/index.html
+++ b/project/vsix/neptuo.productivity/index.html
@@ -174,5 +174,13 @@ https://github.com/neptuo/Productivity</span></a>.
         ga('send', 'pageview');
     </script>
     
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "Organization",
+            "url": "http://www.neptuo.com",
+            "logo": "/Content/Images/Logo-220.png"
+        }
+    </script>
 </body>
 </html>
