Update description of SolutionRunner-v1.6.0.

--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -145,7 +145,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                                                 Added support for counting application and file statistics with classic pie chart view.
                                             </li>
                                             <li>
-                                                Searching is now instant, without deplay.
+                                                Searching is now instant. Removed delay between typing and actual searching.
                                             </li>
                                             <li>
                                                 Added help popup for a first time setup.
@@ -160,10 +160,16 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                                                 File system is scanned in the background. It is also reloaded only when source directory is changed, not on every configuration save.
                                             </li>
                                             <li>
-                                                When global hotkey is not set, application is visible on task-bar.
+                                                Improved mode with no hotkey. Application is shown on the task bar and doesn&#39;t close after running application.
                                             </li>
                                             <li>
-                                                Added titles containing full path for solution files and applications.
+                                                Added tooltips containing full path for solution files and applications.
+                                            </li>
+                                            <li>
+                                                Added Ctrl+C and Ctrl+Shift+C commands for copying application path and file path.
+                                            </li>
+                                            <li>
+                                                Added hover effect for applications and files.
                                             </li>
                                     </ul>
                             </li>
