--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -101,7 +101,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6.1 to download</a>.
                         </li>
 
                 </ul>
@@ -137,6 +137,24 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li>
+                                <strong>v1.6.1</strong>
+                                    <ul>
+
+                                            <li>
+                                                Changing tray-icon when initializing and displaying intermediate progress bar on task bar.
+                                            </li>
+                                            <li>
+                                                Fix missing file after moving it with parent directory.
+                                            </li>
+                                            <li>
+                                                Fix hiding main window after loosing focus if opened by tray-icon.
+                                            </li>
+                                            <li>
+                                                Fix reseting main window state and position after opening using tray-icon.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li>
                                 <strong>v1.6</strong>
                                     <ul>
