--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -101,7 +101,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6.1 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6.2 to download</a>.
                         </li>
 
                 </ul>
@@ -137,6 +137,15 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li>
+                                <strong>v1.6.2</strong>
+                                    <ul>
+
+                                            <li>
+                                                Fix showing a directory in the list when directory with dot in a name is added.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li>
                                 <strong>v1.6.1</strong>
                                     <ul>
