Replace 'Hello!' with 'Greetings!'

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <span class="language">
             <a href="/cesky">Tuto str&#225;nku v&#225;m t&#233;ž můžeme nab&#237;dnout v češtině.</a>
         </span>
-        <h1>Hello!</h1>
+        <h1>Greetings!</h1>
     </div>
 </div>
 
