Add project icons. Add SolutionRunner-v1.6.3. Add Money.

--- a/cesky/index.html
+++ b/cesky/index.html
@@ -197,15 +197,18 @@
                             <a href="/project/desktop/linkextractor">Link Extractor</a>
                         </li>
                         <li>
-                            <a href="/project/dev/neptuo">Neptuo</a>
+                            <a href="/project/universal/money">Money</a>
                         </li>
                         <li>
-                            <a href="/project/dev/neptuo.aspnet.navigation">Neptuo.AspNet.Navigation</a>
+                            <a href="/project/dev/neptuo">Neptuo</a>
                         </li>
                 </ul>
             </div>
             <div class="col-md-5">
                 <ul>
+                        <li>
+                            <a href="/project/dev/neptuo.aspnet.navigation">Neptuo.AspNet.Navigation</a>
+                        </li>
                         <li>
                             <a href="/project/dev/neptuo.behaviors">Neptuo.Behaviors</a>
                         </li>
@@ -217,9 +220,6 @@
                         </li>
                         <li>
                             <a href="/project/dev/neptuo.eventsourcing">Neptuo.EventSourcing</a>
-                        </li>
-                        <li>
-                            <a href="/project/dev/neptuo.eventsourcing.domains">Neptuo.EventSourcing.Domains</a>
                         </li>
                 </ul>
             </div>
