--- a/project/android/index.html
+++ b/project/android/index.html
@@ -86,6 +86,7 @@
 
         <div class="folder" data-search="vocabulary app">
             <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/vocabulary-app-icon.png" class="folder-icon" />
 
                 <a href="/project/android/vocabulary">Vocabulary App</a>
             </h2>
@@ -108,6 +109,7 @@ https://github.com/maraf/vocabularyapp</span></a>.
                         <li>
                             Release of the <a target="_blank" href="https://github.com/maraf/vocabularyapp/releases/download/v1.2.1/neptuo-vocabularyapp-v1.2.1.apk">Vocabulary App v1.2.1 to download</a>.
                         </li>
+
 
                 </ul>
             </article>
