--- a/project/cms/index.html
+++ b/project/cms/index.html
@@ -103,12 +103,14 @@ https://github.com/maraf/PHP-WebFramework</span></a>.
                         </li>
                     
 
+
                 </ul>
             </article>
             <div class="clear"></div>
         </div>
         <div class="folder" data-search="template engine">
             <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/template-engine-icon.png" class="folder-icon" />
 
                 <a href="/project/cms/templateengine">Template Engine</a>
             </h2>
@@ -126,6 +128,7 @@ https://github.com/maraf/PHP-WebFramework</span></a>.
 https://github.com/neptuo/TemplateEngine</span></a>.
                         </li>
                     
+
 
                 </ul>
             </article>
