--- a/project/cms/templateengine/index.html
+++ b/project/cms/templateengine/index.html
@@ -86,6 +86,7 @@
 
         <div class="folder" data-search="template engine">
             <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/template-engine-icon.png" class="folder-icon" />
 
                 <a href="/project/cms/templateengine">Template Engine</a>
             </h2>
@@ -100,6 +101,7 @@
 https://github.com/neptuo/TemplateEngine</span></a>.
                         </li>
                     
+
 
                 </ul>
             </article>
