--- a/project/desktop/chromiumupdater/index.html
+++ b/project/desktop/chromiumupdater/index.html
@@ -86,6 +86,7 @@
 
         <div class="folder" data-search="chromium updater">
             <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/chromium-updater-icon.png" class="folder-icon" />
 
                 <a href="/project/desktop/chromiumupdater">Chromium Updater</a>
             </h2>
@@ -103,6 +104,7 @@ https://github.com/maraf/ChromiumUpdater</span></a>.
                         <li>
                             Release of the <a target="_blank" href="http://apps.neptuo.com/chromium-updater/">Chromium Updater v1.0.2 to download</a>.
                         </li>
+
 
                 </ul>
             </article>
