--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -86,6 +86,7 @@
 
         <div class="folder" data-search="solution runner">
             <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/solution-runner-icon.png" class="folder-icon" />
 
                 <a href="/project/desktop/solutionrunner">Solution Runner</a>
             </h2>
@@ -101,8 +102,12 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6.2 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6.3 to download</a>.
                         </li>
+
+                            <li>
+                                <a target="_blank" href="http://www.neptuo.com/blog/2017/2/3/productivity-solution-runner">Blog post about features and how to setup and use it</a>.
+                            </li>
 
                 </ul>
             </article>
@@ -137,6 +142,18 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li>
+                                <strong>v1.6.3</strong>
+                                    <ul>
+
+                                            <li>
+                                                Fix crashes caused by IO exception while enumerating new directory.
+                                            </li>
+                                            <li>
+                                                Add support for VS2017 which has different installation path format.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li>
                                 <strong>v1.6.2</strong>
                                     <ul>
