--- a/project/universal/money/index.html
+++ b/project/universal/money/index.html
@@ -84,32 +84,26 @@
 
 <div class="container">
 
-        <div class="folder" data-search="neptuo.aspnet.navigation">
+        <div class="folder" data-search="money">
             <h2 class="folder-heading">
-                    <img src="/Content/Images/Projects/nuget-icon.png" class="folder-icon" />
+                    <img src="/Content/Images/Projects/money-icon.png" class="folder-icon" />
 
-                <a href="/project/dev/neptuo.aspnet.navigation">Neptuo.AspNet.Navigation</a>
+                <a href="/project/universal/money">Money</a>
             </h2>
             <article>
                 <ul>
-                        <li>Model (class) based navigation and routing for ASP.NET MVC.</li>
+                        <li>Outcome manager with bar and pie graphs.</li>
 
-                        <li>
-                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0</span></a>.
-                        </li>
 
 
                         <li>
                             Source code at
-                            <a target="_blank" href="https://github.com/neptuo/AspNet.Navigation"><span>
-https://github.com/neptuo/AspNet.Navigation</span></a>.
+                            <a target="_blank" href="https://github.com/maraf/Money"><span>
+https://github.com/maraf/Money</span></a>.
                         </li>
                     
 
 
-                        <li>
-                            Current version on NuGet at <a target="_blank" href="https://www.nuget.org/packages/Neptuo.AspNet.Navigation"><span>nuget.org/packages/Neptuo.AspNet.Navigation</span></a>.
-                        </li>
                 </ul>
             </article>
             <div class="clear"></div>
