--- a/project/universal/webcamimagecollector/index.html
+++ b/project/universal/webcamimagecollector/index.html
@@ -86,12 +86,13 @@
 
         <div class="folder" data-search="webcam image collector">
             <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/webcamimagecollector-icon.png" class="folder-icon" />
 
                 <a href="/project/universal/webcamimagecollector">WebCam Image Collector</a>
             </h2>
             <article>
                 <ul>
-                        <li>Client-server HTTP based application for taking photos and downloading them from the server with WebCam to the clients.</li>
+                        <li>Client-server HTTP based application for taking photos and downloading them from a server with WebCam to clients.</li>
 
 
 
@@ -101,6 +102,7 @@
 https://github.com/maraf/WebCamImageCollector</span></a>.
                         </li>
                     
+
 
                 </ul>
             </article>
