--- a/project/desktop/index.html
+++ b/project/desktop/index.html
@@ -87,6 +87,7 @@
 
         <div class="folder" data-search="chromium updater">
             <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/chromium-updater-icon.png" class="folder-icon" />
 
                 <a href="/project/desktop/chromiumupdater">Chromium Updater</a>
             </h2>
@@ -105,6 +106,7 @@ https://github.com/maraf/ChromiumUpdater</span></a>.
                         <li>
                             Release of the <a target="_blank" href="http://apps.neptuo.com/chromium-updater/">Chromium Updater v1.0.2 to download</a>.
                         </li>
+
 
                 </ul>
             </article>
@@ -131,12 +133,14 @@ https://github.com/maraf/LinkExtractor</span></a>.
                             Release of the <a target="_blank" href="https://github.com/maraf/LinkExtractor/releases">Link Extractor v1.0.1 to download</a>.
                         </li>
 
+
                 </ul>
             </article>
             <div class="clear"></div>
         </div>
         <div class="folder" data-search="solution runner">
             <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/solution-runner-icon.png" class="folder-icon" />
 
                 <a href="/project/desktop/solutionrunner">Solution Runner</a>
             </h2>
@@ -153,8 +157,9 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6.2 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6.3 to download</a>.
                         </li>
+
 
                 </ul>
             </article>
@@ -184,6 +189,7 @@ https://github.com/maraf/WindowsDock</span></a>.
                             Release of the <a target="_blank" href="https://github.com/maraf/WindowsDock/releases">Windows Dock v1.2.22 to download</a>.
                         </li>
 
+
                 </ul>
             </article>
             <div class="clear"></div>
@@ -203,6 +209,7 @@ https://github.com/maraf/WindowsDock</span></a>.
                         <li>
                             Release of the <a target="_blank" href="http://apps.neptuo.com/winrun">WinRun v1.6.0 to download</a>.
                         </li>
+
 
                 </ul>
             </article>
