--- a/project/dev/neptuo.eventsourcing.formatters.composite/index.html
+++ b/project/dev/neptuo.eventsourcing.formatters.composite/index.html
@@ -86,7 +86,7 @@
 
         <div class="folder" data-search="neptuo.eventsourcing.formatters.composite">
             <h2 class="folder-heading">
-                    <img src="http://robertmjordan.com/Content/theme/img/technologies/nuget-icon.png" class="folder-icon" />
+                    <img src="/Content/Images/Projects/nuget-icon.png" class="folder-icon" />
 
                 <a href="/project/dev/neptuo.eventsourcing.formatters.composite">Neptuo.EventSourcing.Formatters.Composite</a>
             </h2>
@@ -95,11 +95,11 @@
                         <li>Composite formatters support for EventSourcing.</li>
 
                         <li>
-                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0.</span></a>
+                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0</span></a>.
                         </li>
 
                         <li>
-                            <a target="_blank" href="https://github.com/neptuo/Framework/wiki/EventSourcing">Project documentation.</a>
+                            <a target="_blank" href="https://github.com/neptuo/Framework/wiki/EventSourcing">Project documentation</a>.
                         </li>
 
                         <li>
@@ -108,6 +108,7 @@
 github.com/neptuo/Framework</span></a>.
                         </li>
                     
+
 
                         <li>
                             Current version on NuGet at <a target="_blank" href="https://www.nuget.org/packages/Neptuo.EventSourcing.Formatters.Composite"><span>nuget.org/packages/Neptuo.EventSourcing.Formatters.Composite</span></a>.
