--- a/project/dev/neptuo.windows.hotkeys/index.html
+++ b/project/dev/neptuo.windows.hotkeys/index.html
@@ -86,7 +86,7 @@
 
         <div class="folder" data-search="neptuo.windows.hotkeys">
             <h2 class="folder-heading">
-                    <img src="http://robertmjordan.com/Content/theme/img/technologies/nuget-icon.png" class="folder-icon" />
+                    <img src="/Content/Images/Projects/nuget-icon.png" class="folder-icon" />
 
                 <a href="/project/dev/neptuo.windows.hotkeys">Neptuo.Windows.HotKeys</a>
             </h2>
@@ -95,7 +95,7 @@
                         <li>Global hotkey (Windows wide) binding made easy.</li>
 
                         <li>
-                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0.</span></a>
+                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0</span></a>.
                         </li>
 
 
@@ -105,6 +105,7 @@
 github.com/neptuo/Framework</span></a>.
                         </li>
                     
+
 
                         <li>
                             Current version on NuGet at <a target="_blank" href="https://www.nuget.org/packages/Neptuo.Windows.HotKeys"><span>nuget.org/packages/Neptuo.Windows.HotKeys</span></a>.
