--- a/project/index.html
+++ b/project/index.html
@@ -83,6 +83,10 @@
 </div>
 
 <div class="container">
+    <div class="folder">
+        
+        <h2 class="center"><a href="/project/all">All projects</a></h2>
+    </div>
     <div class="col-md-6">
         <div class="folder box">
             <div class="folder-heading">
