--- a/project/vsix/neptuo.productivity/index.html
+++ b/project/vsix/neptuo.productivity/index.html
@@ -86,7 +86,7 @@
 
         <div class="folder" data-search="neptuo.productivity">
             <h2 class="folder-heading">
-                    <img src="https://mygetwww-2e16.kxcdn.com/Content/images/packageDefaultIcon_vsix.png?c=Mi4xLjAuMjEwNw==" height="30" />
+                    <img src="/Content/Images/Projects/vsix-icon.png" class="folder-icon" />
 
                 <a href="/project/vsix/neptuo.productivity">Neptuo.Productivity</a>
             </h2>
@@ -95,11 +95,11 @@
                         <li>A set of productivity features: Line duplication, cancel build on first error, build times or show start page after solution closed. All configurable.</li>
 
                         <li>
-                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0.</span></a>
+                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0</span></a>.
                         </li>
 
                         <li>
-                            <a target="_blank" href="https://github.com/neptuo/Productivity/releases">Project documentation.</a>
+                            <a target="_blank" href="https://github.com/neptuo/Productivity/releases">Project documentation</a>.
                         </li>
 
                         <li>
@@ -108,6 +108,7 @@
 https://github.com/neptuo/Productivity</span></a>.
                         </li>
                     
+
 
                         <li>
                             Current version can be downloaded from <a target="_blank" href="https://www.myget.org/F/neptuo-dev/vsix/">MyGet VSIX Feed</a>.
