--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -102,7 +102,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.6.3 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.7.0 to download</a>.
                         </li>
 
                             <li>
@@ -143,6 +143,24 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
                             <li>
+                                <strong>v1.7.0</strong>
+                                    <ul>
+
+                                            <li>
+                                                Added context menu for tray-icon.
+                                            </li>
+                                            <li>
+                                                Added support for select minimal VS version for auto selecting VS version feature.
+                                            </li>
+                                            <li>
+                                                Added support for hiding VS versions.
+                                            </li>
+                                            <li>
+                                                Fix crashing after filling invalid or not accessible root path and added exception logging.
+                                            </li>
+                                    </ul>
+                            </li>
+                            <li>
                                 <strong>v1.6.3</strong>
                                     <ul>
 
@@ -150,7 +168,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                                                 Fix crashes caused by IO exception while enumerating new directory.
                                             </li>
                                             <li>
-                                                Add support for VS2017 which has different installation path format.
+                                                Added support for VS2017 which has different installation path format.
                                             </li>
                                     </ul>
                             </li>
