--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -102,7 +102,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.7.0 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.8.0 to download</a>.
                         </li>
 
                             <li>
@@ -142,6 +142,33 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li>
+                                <strong>v1.8.0</strong>
+                                    <ul>
+
+                                            <li>
+                                                Added automatic detection of Visual Studio Code. It is treated as main application which can be hidden from a configuration window.
+                                            </li>
+                                            <li>
+                                                Configuration properties are splitted into tabs.
+                                            </li>
+                                            <li>
+                                                A better control for picking additional application path. From plain textbox to file picker with support for manual path setting.
+                                            </li>
+                                            <li>
+                                                Statistics are grouped by year and month, with overview for each year and global counts.
+                                            </li>
+                                            <li>
+                                                Each additional application can has hotkey which starts the application in combination with Alt.
+                                            </li>
+                                            <li>
+                                                Prefered application is now picked from dropdown containing main and additional applications.
+                                            </li>
+                                            <li>
+                                                All windows, except the main one, has standard windows border and controls.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li>
                                 <strong>v1.7.0</strong>
                                     <ul>
